# unisca-attendance-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/asistencias/: apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/asistencias/migrations/: 0001_initial.py
apps/cursos/: apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/cursos/migrations/: 0001_initial.py
apps/usuarios/: models.py  serializers.py  tests.py  urls.py  views.py
apps/usuarios/management/commands/: seed.py
apps/usuarios/migrations/: 0001_initial.py  0002_alter_usuario_rol_docente_estudiante.py  0003_estudiante_foto_perfil_updated_at.py
apps/usuarios/seeds/: __init__.py  attendance.py  constants.py  courses.py  data.py  runner.py  sessions.py  users.py
config/: asgi.py  urls.py
config/settings/: base.py  development.py  production.py
docker/: nginx.conf  supervisord.conf
