[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.1.*",
    "django-cors-headers==4.*",
    "djangorestframework==3.15.*",
    "djangorestframework-simplejwt==5.*",
    "gunicorn==21.*",
    "pillow==10.*",
    "psycopg2-binary==2.*",
    "python-decouple==3.*",
]
