[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.1.*",
    "django-cors-headers==4.*",
    "djangorestframework==3.15.*",
    "djangorestframework-simplejwt==5.*",
    "gunicorn==21.*",
    "pillow==10.*",
    "psycopg2-binary==2.*",
    "python-decouple==3.*",
    "whitenoise==6.*",
]

[dependency-groups]
dev = [
    "pre-commit==4.5.*",
    "ruff==0.15.*",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
]

[tool.ruff.lint.isort]
known-first-party = [
    "apps",
    "config",
]

[tool.ruff.lint.per-file-ignores]
"config/settings/*.py" = [
    "F403",
    "F405",
]
